Revision history for DBIx::Class::Sims (ordered by revision number).

0.300300 Sep ?? 2016 ??:??:?? PDT
   - Tests no longer output randomness (Apparently, p() != np() ... who knew?!)

0.300204 Aug 05 2016 14:00:00 PDT
   - Support nested relationships when finding existing rows

0.300203 May 24 2016 14:00:00 PDT
   - Add basic capability to follow relationships for finding parentage
   - Add detection of DateTime objects when searching across unique constraints

0.300202 Apr 30 2016 14:00:00 PDT
   - Add missing MANIFEST files (stupid me!)

0.300201 Apr 27 2016 14:00:00 PDT
   - Add a die_on_failure option (defaulting to 1) and returning the error when
     it is not set.

0.300200 Apr 27 2016 08:00:00 PDT
   - Refactor the codebase into a prepper and a runner. The runner will make it
     easier to extend the codebase and add more functionality.
   - Count what is created and return that as $additional->{created}.

0.300102 Apr 05 2016 08:00:00 PDT
   - Fix bug where the check to ensure different parents specifying the same
     child will link to it was too expansive.
   - Warn the seed used when a failure throws an error.
   - Improve test suite output to not show the outputted warning on failure.

0.300101 Apr 01 2016 11:30:00 PDT
   - Fix mistake where I used "limit" instead of "rows" (Thanks gtermars!)

0.300100 Mar 21 2016 09:00:00 PDT
   - THIS RELEASE UPGRADES THE MINIMUM PERL VERSION
   - Upgrade Perl minimum version from 5.8.4 to 5.10.2
     - CPANTS was claiming breakage on 5.8.x and no need to support it
   - Clone the provided arguments because we handle them destructively
   - Enable forcing creation of parents with a __META__ field
   - Use {limit => 1} when searching for the first parent

0.300009 Mar 17 2016 09:00:00 PDT
   - Hoist DateTime-ish strings into DateTime objects as needed.

0.300008 Mar 15 2016 14:00:00 PDT
   - Force a reload from database of all rows returned by load_sims()