@@ -2,6 +2,7 @@ Revision history for DBIx::Class::Sims (ordered by revision number).
 
 0.300300 Sep ?? 2016 ??:??:?? PDT
    - Tests no longer output randomness (Apparently, p() != np() ... who knew?!)
+   - Can provide a number or a hashref for a has_many relationship
 
 0.300204 Aug 05 2016 14:00:00 PDT
    - Support nested relationships when finding existing rows
